[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "PySCES"
version = "0.1.0"
dependencies = [
  "tcpb>=0.13.2",
  "numpy>=1.23",
  "pyyaml>=0.2.5",
  "pandas>=2.1.1",
  "scipy>=1.11.3",
  "psutil>=5.9.8"
]
requires-python = ">=3.9"
authors = [
    {name = "Ken Miyazaki", email = "km822@cornell.edu"},
    {name = "Christopher Myers", email = "cmyers7@ucmerced.edu"}
]
readme = "README.md"
classifiers = [
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Topic :: Libraries :: Python Modules",
  "Development Status :: 4 - Beta"
]

[project.urls]
Repository = "https://github.com/AnanthGroup/AI-LSC-IVR"


[project.scripts]
pysces = "main:main"

[tool.setuptools.packages.find]
exclude = ["tests", "debug", "__pycache__"]